tests/negative/parser/untagged_arity.orng
// untagged_arity.orng:5:36: error: built-in function takes 1 parameter, 0 arguments given
// type My_Untagged_Union = @Untagged()
//                                   ^
// 
type My_Untagged_Union = @Untagged()